# spaceguard_mac

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: AGENT_PROGRESS.md.example  ARCHITECTURE.md  GITHUB_SETUP.md  REQUIREMENTS.md  SPEC.md  com.spaceguard.mac.plist.example
resources/: README.md  SpaceGuard.icns
scripts/: build_mac_app.sh  generate_icon.py
src/spaceguard/: __init__.py  __main__.py  app.py  cleanup.py  launch_agent.py  monitor.py  settings_store.py  state.py
tests/: test_cleanup.py  test_monitor.py  test_settings_store.py  test_state.py
